# Kanji-Clustering-API

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Procfile  README.md  _unittest.py  affinities_detection.py  clustering.py  kanji_types.py  main.py  preprocessing.py  pyproject.toml  requirements.txt  test.py  test_kanji.py
.github/workflows/: code_quality.yml
estimator/: JIS_level-1_kanji_set.pkl  jis_level_1.pkl  jis_level_2.pkl
src/kanji_clustering_api/: __init__.py  affinities_detection.py  clustering.py  main.py  preprocessing.py  test_kanji.py
