[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kanji-clustering-api"
version = "0.1.0"
description = "A FastAPI API for clustering kanji characters"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "numpy>=1.26.0",
    "pandas>=2.2.3",
    "pillow>=10.3.0",
    "progressbar2>=4.0.0",
    "scikit-learn>=1.5.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "types-requests",
    "pandas-stubs",
]
lint = [
    "ruff>=0.8.0",
    "mypy>=1.0.0",
]



[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",  # blank line before class docstring (conflicts with D211)
    "D213",  # multi-line summary should start at second line (conflicts with D212)
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "progressbar",
    "sklearn.cluster",
    "uvicorn",
]
ignore_missing_imports = true
